# mandelshtam

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CPPLINT.cfg  CREDITS.md  Dockerfile  Makefile  README.md  build.py  pyproject.toml
datasets/books/: the-call-of-cthulhu.txt  the-lady-with-the-dog-and-other-stories.txt  the-picture-of-dorian-gray.txt
datasets/dummies/: lorem-ispum.txt
docs/: conf.py  exceptions.rst  index.rst  levenshtein.rst
mandelshtam/: __init__.py
mandelshtam/internal/: exceptions.py  typing.py
mandelshtam/internal/interfaces/: backend.py  distance.py
mandelshtam/internal/levenshtein/: __init__.py  backend.py  clang.c  clang.pyi  python.py  python.pyi
mandelshtam/internal/levenshtein/internal/: c.c  clang.c  clang.pyi  python.py  python.pyi
tests/: assertions.py  basedir.py  loaders.py
tests/cases/levenshtein/: test_clang.py  test_python.py
tests/cases/levenshtein/clang/: test_distance.py  test_performance.py
tests/cases/levenshtein/python/: test_distance.py
tests/data/books/: a-doll-house.txt  a-hero-of-our-time.txt  a-modest-proposal.txt  anna-karenina.txt  leviathan.txt  metamorphosis.txt  simple-sabotage-field-manual-by-united-states.txt  the-gambler.txt  the-great-gatsby.txt  the-legend-of-sleepy-hollow.txt  the-strange-case-of-dr-jekyll-and-mr-hyde.txt  the-yellow-wallpaper.txt  treasure-island.txt  wee-babies-printed-in-colours-from-original-designs.txt
tests/data/levenshtein/: distance.csv  performance-clang.csv
tests/data/levenshtein/distance/: utf8.csv
tests/utils/: assertions.py  basedir.py  books.py  csv.py
